--- a/scss/blocks/_buy.scss
+++ b/scss/blocks/_buy.scss
@@ -1,191 +1,194 @@
 .buy {
-  margin-top: 130px;
-  &-container {
-    max-width: 2020px;
-    padding: 0 50px;
-  }
-  &__inner {
-    display: flex;
-    flex-direction: column;
-  }
-  &__title {
-    text-align: center;
-    font-family: Cocogoose Narrow;
-    font-size: 72px;
-    text-transform: uppercase;
-  }
+	margin-top: 130px;
+	&-container {
+		max-width: 2020px;
+		padding: 0 50px;
+	}
+	&__inner {
+		display: flex;
+		flex-direction: column;
+	}
+	&__title {
+		text-align: center;
+		font-family: Cocogoose Narrow;
+		font-size: 72px;
+		text-transform: uppercase;
+	}
 
-  .tabs {
-    margin-top: 70px;
-    display: flex;
-    column-gap: 15px;
-    align-self: center;
+	.tabs {
+		margin-top: 70px;
+		display: flex;
+		column-gap: 15px;
+		align-self: center;
 
-    &__item {
-      min-width: 162px;
-      display: inline-block;
-      padding: 13px 25px;
-      font-size: 15px;
-      color: $dark;
-      line-height: 1.4;
-      text-align: center;
-      border-radius: 100px;
-      border: 1px solid #e2e2e2;
-      cursor: pointer;
-      transition: all 0.2s linear;
+		&__item {
+			min-width: 162px;
+			display: inline-block;
+			padding: 13px 25px;
+			font-size: 15px;
+			color: $dark;
+			line-height: 1.4;
+			text-align: center;
+			border-radius: 100px;
+			border: 1px solid #e2e2e2;
+			cursor: pointer;
+			transition: all 0.2s linear;
 
-      &--active {
-        color: $white;
-        border-color: #f02c38;
-        background-color: #f02c38;
-      }
+			&--active {
+				color: $white;
+				border-color: #f02c38;
+				background-color: #f02c38;
+			}
 
-      @media (hover: hover) {
-        &:hover {
-          color: $white;
-          border-color: #f02c38;
-          background-color: #f02c38;
-        }
-      }
+			@media (hover: hover) {
+				&:hover {
+					color: $white;
+					border-color: #f02c38;
+					background-color: #f02c38;
+				}
+			}
 
-      @media (hover: none) {
-        &:active {
-          color: $white;
-          border-color: #f02c38;
-          background-color: #f02c38;
-        }
-      }
-    }
-  }
+			@media (hover: none) {
+				&:active {
+					color: $white;
+					border-color: #f02c38;
+					background-color: #f02c38;
+				}
+			}
+		}
+	}
 
-  &__items {
-    margin-top: 70px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-  }
-  &__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 280px;
-    min-width: 100%;
-    border: 1px solid #f3f3f3;
-  }
-  &__more {
-    min-width: 213px;
-    min-height: 60px;
-    align-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-    border-radius: 100px;
-    background: $primary;
-    color: $white;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 140%;
-    transition: all 0.2s linear;
+	&__items {
+		margin-top: 70px;
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
+		border-top: 1px solid #f3f3f3;
+		border-left: 1px solid #f3f3f3;
+	}
+	&__item {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-height: 280px;
+		min-width: 100%;
+		border: 1px solid #f3f3f3;
+		border-width: 0 1px 0 0;
+	}
+	&__more {
+		min-width: 213px;
+		min-height: 60px;
+		align-self: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-top: 40px;
+		border-radius: 100px;
+		background: $primary;
+		color: $white;
+		text-align: center;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 140%;
+		transition: all 0.2s linear;
 
-    @media (hover: hover) {
-      &:hover {
-        background: #d9212c;
-      }
-    }
+		@media (hover: hover) {
+			&:hover {
+				background: #d9212c;
+			}
+		}
 
-    @media (hover: none) {
-      &:active {
-        background: #d9212c;
-      }
-    }
-  }
+		@media (hover: none) {
+			&:active {
+				background: #d9212c;
+			}
+		}
+	}
 }
 
 @media (max-width: 1440px) {
-  .buy {
-    margin-top: 100px;
+	.buy {
+		margin-top: 100px;
 
-    &__item {
-      img {
-        max-width: 155px;
-      }
-      min-height: 268px;
-    }
-  }
+		&__item {
+			img {
+				max-width: 155px;
+			}
+			min-height: 268px;
+		}
+	}
 }
 @media (max-width: 1200px) {
-  .buy {
-    &__items {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
+	.buy {
+		&__items {
+			grid-template-columns: repeat(4, 1fr);
+		}
+	}
 }
 
 @media (max-width: 992px) {
-  .buy {
-    &__title {
-      font-size: 56px;
-    }
+	.buy {
+		&__title {
+			font-size: 56px;
+		}
 
-    .tabs {
-      margin-top: 50px;
+		.tabs {
+			margin-top: 50px;
 
-      &__item {
-        min-width: 139px;
-      }
-    }
+			&__item {
+				min-width: 139px;
+			}
+		}
 
-    &-container {
-      padding: 0 20px;
-    }
-    &__item {
-      min-height: 244px;
-    }
-    &__items {
-      margin-top: 50px;
-      grid-template-columns: repeat(3, 1fr);
-    }
-    &__more {
-      margin-top: 30px;
-    }
-  }
+		&-container {
+			padding: 0 20px;
+		}
+		&__item {
+			min-height: 244px;
+		}
+		&__items {
+			margin-top: 50px;
+			grid-template-columns: repeat(3, 1fr);
+		}
+		&__more {
+			margin-top: 30px;
+		}
+	}
 }
 @media (max-width: 768px) {
-  .buy {
-    margin-top: 70px;
-  }
+	.buy {
+		margin-top: 70px;
+	}
 }
 @media (max-width: 576px) {
-  .buy {
-    &__title {
-      font-size: 36px;
-    }
+	.buy {
+		&__title {
+			font-size: 36px;
+		}
 
-    .tabs {
-      margin-top: 40px;
-      &__item {
-        font-size: 13px;
-      }
-    }
+		.tabs {
+			margin-top: 40px;
+			&__item {
+				font-size: 13px;
+			}
+		}
 
-    &-container {
-      padding: 0 15px;
-    }
-    &__item {
-      min-height: 112px;
-      img {
-        max-width: 103px;
-      }
-    }
-    &__items {
-      margin-top: 40px;
-      grid-template-columns: repeat(2, 1fr);
-    }
-    &__more {
-      font-size: 15px;
-      width: 100%;
-      min-height: 49px;
-    }
-  }
+		&-container {
+			padding: 0 15px;
+		}
+		&__item {
+			min-height: 112px;
+			img {
+				max-width: 103px;
+			}
+		}
+		&__items {
+			margin-top: 40px;
+			grid-template-columns: repeat(2, 1fr);
+		}
+		&__more {
+			font-size: 15px;
+			width: 100%;
+			min-height: 49px;
+		}
+	}
 }
