--- a/scss/blocks/_event-modal.scss
+++ b/scss/blocks/_event-modal.scss
@@ -10,12 +10,15 @@
     visibility: hidden;
     background-color: rgba(0, 0, 0, 0.4);
     transition: all 300ms linear;
+    z-index: 99999;
     &--active {
       opacity: 1;
       visibility: visible;
     }
     &-right {
       padding: 40px 50px 85px;
+      background-color: $white;
+      border-radius: 0 20px 20px 0;
     }
     &-left {
       img {
@@ -122,7 +125,6 @@
     top: 50%;
     width: 1514px;
     transform: translateY(40px) translate(-50%, -50%);
-    background-color: $white;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-radius: 20px;
@@ -166,17 +168,19 @@
       top: 70px;
       left: 50%;
       transform: translateX(-50%);
-      border-radius: 20px 20px 0 0;
     }
     &__modal {
       &-left {
         img {
-          border-radius: 20px 20px 0 0;
+          object-fit: cover;
           width: 100%;
+          border-radius: 20px 20px 0 0;
         }
       }
       &-right {
         padding: 20px 30px 70px;
+        overflow-y: scroll;
+        border-radius: 0 0 20px 20px;
       }
       &-date {
         font-size: 12px;
@@ -184,6 +188,12 @@
       &-times {
         top: -20px;
         right: 10px;
+        span {
+          &::after,
+          &::before {
+            background: $white;
+          }
+        }
       }
     }
   }
@@ -205,7 +215,7 @@
         padding: 10px 15px 70px;
       }
       &-left {
-        max-height: 284px;
+        width: 100%;
         display: flex;
         justify-content: center;
         img {
