--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -11,7 +11,9 @@
     display: flex;
   }
   &__logo {
-    transform: rotate(1.932deg);
+    img {
+      max-width: 136px;
+    }
   }
   &__right {
     margin-left: auto;
@@ -46,7 +48,7 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      border: 1px solid $white;
+      border: 1px solid rgba($white, 0.3);
       position: relative;
       transition: all 0.2s linear;
 
@@ -191,7 +193,11 @@
 @media (max-width: 1440px) {
   .footer {
     margin-top: 100px;
-
+    &__logo {
+      img {
+        max-width: 100px;
+      }
+    }
     &__contacts,
     &__socials {
       margin-right: 155px;
