--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -15,8 +15,8 @@
   }
 
   &-container {
-    max-width: 1470px;
-    padding: 0 15px;
+    max-width: 2020px;
+    padding: 0 50px;
     margin: 0 auto;
   }
 
@@ -28,6 +28,7 @@
   &__title {
     padding-top: 40px;
     max-width: 462px;
+    margin-left: 241px;
     font-family: Cocogoose Narrow;
     font-size: 72px;
     color: $white;
@@ -44,6 +45,13 @@
   }
 }
 
+@media (max-width: 1920px) {
+  .intro {
+   &__title{
+    margin-left: 168px;
+   }
+  }
+}
 
 @media (max-width: 992px) {
   .intro {
