--- a/scss/blocks/_player.scss
+++ b/scss/blocks/_player.scss
@@ -1,147 +1,147 @@
 .player {
-  margin-top: 170px;
-  min-height: 950px;
-  &-container {
-    max-width: 2020px;
-    padding: 0 50px;
-    height: 100%;
-  }
-  &__inner {
-    display: flex;
-    align-items: center;
-    position: relative;
-    height: 100%;
-    &--active {
-      position: fixed;
-      left: 0;
-      top: 0;
-      height: 100vh;
-      width: 100vw;
-      background-color: black;
-      z-index: 100;
-    }
-  }
-  &__wrapper {
-    position: relative;
-    width: 100%;
-  }
-  &__video {
-    height: 100%;
-    width: 100%;
-    border-radius: 40px;
-    &--active {
-      border-radius: 0;
-    }
-  }
-  &__progress {
-    display: none;
-    position: absolute;
-    width: calc(100% - 100px);
-    height: 2px;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 10%;
-    &--fixed {
-      display: block;
-      z-index: 10;
-      position: absolute;
-    }
-    progress::-webkit-progress-bar {
-      background-color: $white;
-    }
-    progress::-webkit-progress-value {
-      background: $primary;
-      transition: width 500ms linear;
-    }
-    progress {
-      width: 100%;
-      height: 2px;
-    }
-  }
-  &__play {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all 400ms linear;
-    @media (hover: hover) {
-      &:hover {
-        transform: translate(-50%, -50%) scale(1.1);
-      }
-    }
-  }
-  &__exit {
-    display: none;
-    width: 150px;
-    height: 150px;
-    background-image: url("../images/video/exit.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: absolute;
-    right: 30px;
-    top: 40px;
-    &--fixed {
-      display: block;
-      z-index: 10;
-      position: absolute;
-    }
-  }
+	margin-top: 170px;
+	min-height: 950px;
+	&-container {
+		max-width: 2020px;
+		padding: 0 50px;
+		height: 100%;
+	}
+	&__inner {
+		display: flex;
+		align-items: center;
+		position: relative;
+		height: 100%;
+		&--active {
+			position: fixed;
+			left: 0;
+			top: 0;
+			height: 100vh;
+			width: 100vw;
+			background-color: black;
+			z-index: 100;
+		}
+	}
+	&__wrapper {
+		position: relative;
+		width: 100%;
+	}
+	&__video {
+		height: 100%;
+		width: 100%;
+		border-radius: 40px;
+		&--active {
+			border-radius: 0;
+		}
+	}
+	&__progress {
+		display: none;
+		position: absolute;
+		width: calc(100% - 100px);
+		height: 2px;
+		left: 50%;
+		transform: translateX(-50%);
+		bottom: 10%;
+		&--fixed {
+			display: block;
+			z-index: 10;
+			position: absolute;
+		}
+		progress::-webkit-progress-bar {
+			background-color: $white;
+		}
+		progress::-webkit-progress-value {
+			background: $primary;
+			transition: width 500ms linear;
+		}
+		progress {
+			width: 100%;
+			height: 2px;
+		}
+	}
+	&__play {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		transition: all 400ms linear;
+		@media (hover: hover) {
+			&:hover {
+				transform: translate(-50%, -50%) scale(1.1);
+			}
+		}
+	}
+	&__exit {
+		display: none;
+		width: 155px;
+		height: 155px;
+		background-image: url('../images/video/exit.svg');
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+		position: absolute;
+		right: 20px;
+		top: 5%;
+		&--fixed {
+			display: block;
+			z-index: 10;
+			position: absolute;
+		}
+	}
 }
 @media (max-width: 1920px) {
-  .player {
-    min-height: 754px;
-  }
+	.player {
+		min-height: 754px;
+	}
 }
 @media (max-width: 1440px) {
-  .player {
-    min-height: 410px;
-    &__exit {
-      background-image: url("../images/video/exit-720.svg");
-      width: 23px;
-      height: 23px;
-      right: 25px;
-      top: 25px;
-      left: auto;
-    }
-    &__play {
-      width: 120px;
-      height: 120px;
-    }
-    &__progress {
-      width: calc(100% - 40px);
-      bottom: 50px;
-    }
+	.player {
+		min-height: 410px;
+		&__exit {
+			background-image: url('../images/video/exit-720.svg');
+			width: 23px;
+			height: 23px;
+			right: 25px;
+			top: 25px;
+			left: auto;
+		}
+		&__play {
+			width: 120px;
+			height: 120px;
+		}
+		&__progress {
+			width: calc(100% - 40px);
+			bottom: 50px;
+		}
 
-    &-container {
-      padding: 0 20px;
-    }
-  }
+		&-container {
+			padding: 0 20px;
+		}
+	}
 }
 @media (max-width: 768px) {
-  .player {
-    margin-top: 70px;
-    min-height: 164px;
-    &__play {
-      width: 70px;
-      height: 70px;
-    }
-    &-container {
-      padding: 0 15px;
-    }
-    &__video {
-      border-radius: 30px;
-      &--active {
-        border-radius: 0;
-      }
-    }
-    &__exit {
-      width: 16px;
-      height: 16px;
-    }
-    &__progress {
-      width: calc(100% - 30px);
-      bottom: 40px;
-    }
-  }
+	.player {
+		margin-top: 70px;
+		min-height: 164px;
+		&__play {
+			width: 70px;
+			height: 70px;
+		}
+		&-container {
+			padding: 0 15px;
+		}
+		&__video {
+			border-radius: 30px;
+			&--active {
+				border-radius: 0;
+			}
+		}
+		&__exit {
+			width: 16px;
+			height: 16px;
+		}
+		&__progress {
+			width: calc(100% - 30px);
+			bottom: 40px;
+		}
+	}
 }
