--- a/scss/blocks/_assortment.scss
+++ b/scss/blocks/_assortment.scss
@@ -71,16 +71,17 @@
   }
 
   &__slider {
-    padding: 0 111px 100px;
+    padding: 0 140px 110px;
     overflow: hidden;
-    &-wrapper {
-      transition: all 600ms linear !important;
-    }
+
     .item {
       width: 400px;
       position: relative;
       overflow: hidden;
       transition: all 0.2s linear !important;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       &__front {
         width: 100%;
@@ -113,6 +114,12 @@
         transition: all 0.2s linear;
         opacity: 0;
         visibility: hidden;
+
+        &--active {
+          border-radius: 20px;
+          opacity: 1;
+          visibility: visible;
+        }
 
         &-title {
           font-size: 22px;
@@ -208,13 +215,37 @@
           }
         }
       }
+
+      &__btn {
+        display: none;
+        margin-top: 10px;
+        font-size: 13px;
+        font-weight: 500;
+        color: #878787;
+        text-align: center;
+        position: relative;
+
+        &::before {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          background: #878787;
+        }
+      }
+
       @media (hover: hover) {
         &:hover {
+          z-index: 3;
           border-radius: 20px;
           cursor: pointer;
           .item__back {
             opacity: 1;
             visibility: visible;
+            border-radius: 20px;
           }
         }
       }
@@ -326,12 +357,43 @@
       right: 50px;
     }
   }
+  .swiper-slide {
+    pointer-events: none;
+
+    &-active,
+    &-next {
+      pointer-events: all;
+    }
+  }
+  .swiper-slide-next + .swiper-slide,
+  .swiper-slide-next + .swiper-slidаe + .swiper-slide {
+    pointer-events: all;
+  }
+
+  @media (max-width: 1440px) {
+    .swiper-slide-next + .swiper-slide + .swiper-slide {
+      pointer-events: none;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .swiper-slide-next + .swiper-slide {
+      pointer-events: none;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .swiper-slide-next {
+      pointer-events: none;
+    }
+  }
+  
 }
 
 @media (max-width: 1920px) {
   .assortment {
     &__slider {
-      padding-bottom: 114px;
+      padding: 0 110px 125px;
     }
   }
 }
@@ -362,7 +424,7 @@
     }
 
     &__slider {
-      padding-bottom: 100px;
+      padding: 0 80px 110px;
 
       .item__front-weight {
         margin-top: 4px;
@@ -421,6 +483,22 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .assortment {
+    &__slider {
+      .item {
+        &__back {
+          height: calc(100% - 28px);
+        }
+
+        &__btn {
+          display: inline-block;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .assortment {
     padding: 90px 0 35px;
@@ -456,11 +534,18 @@
     }
 
     &__slider {
-      padding-bottom: 70px;
+      padding: 0 15px 50px;
 
       .item {
         &:hover {
           border-radius: 10px;
+        }
+
+        &__front {
+          &-weight {
+            margin-top: 20px;
+            font-size: 18px;
+          }
         }
 
         &__back {
@@ -489,7 +574,7 @@
         height: 26px;
         min-width: 37px;
         min-height: 26px;
-        left: 15px;
+        left: 0;
         top: calc(50% - 35px);
       }
 
@@ -498,7 +583,7 @@
         height: 26px;
         min-width: 37px;
         min-height: 26px;
-        right: 15px;
+        right: 0;
         top: calc(50% - 35px);
       }
 
