--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -126,6 +126,11 @@
     &__logo {
       max-width: 100px;
     }
+
+    &-container {
+      padding: 0 20px;
+      margin: 0 auto;
+    }
   }
 }
 @media (max-width: 992px) {
@@ -138,6 +143,10 @@
 
 @media (max-width: 768px) {
   .header {
+    &-container {
+      padding: 0 15px;
+      margin: 0 auto;
+    }
     &__nav {
       width: 100%;
       height: 100vh;
