--- a/scss/blocks/_recipe.scss
+++ b/scss/blocks/_recipe.scss
@@ -70,13 +70,8 @@
 	}
 
 	&__slider {
-		padding-bottom: 100px;
-		margin: 0 100px;
+		padding: 0 160px 100px;
 		overflow: hidden;
-
-		&-wrapper {
-			transition: all 600ms linear !important;
-		}
 
 		.r-item {
 			display: flex;
@@ -85,7 +80,6 @@
 
 			&__img {
 				max-width: 750px;
-				min-width: 750px;
 			}
 
 			&__content {
@@ -381,6 +375,7 @@
 			background: #f02c38;
 			cursor: pointer;
 			transition: all 0.2s linear;
+			z-index: 2;
 
 			svg {
 				width: 7px;
@@ -420,14 +415,14 @@
 			position: absolute;
 			top: calc(50% - 50px);
 			transform: translateY(-50%);
-			left: 0;
+			left: 50px;
 		}
 
 		&-next {
 			position: absolute;
 			top: calc(50% - 50px);
 			transform: translateY(-50%);
-			right: 0;
+			right: 50px;
 		}
 	}
 }
@@ -435,6 +430,7 @@
 @media (max-width: 1920px) {
 	.recipe {
 		&__slider {
+			padding: 0 130px 100px;
 			padding-bottom: 70px;
 
 			.r-item {
@@ -445,12 +441,11 @@
 				}
 
 				&__img {
-					max-width: 100%;
 					min-width: 437px;
 				}
 
 				&__content {
-					flex: 1 0 655px;
+					flex: 1 0 625px;
 				}
 
 				&__ingredients {
@@ -495,8 +490,7 @@
 		}
 
 		&__slider {
-			margin: 0 26px;
-			padding-bottom: 50px;
+			padding: 0 50px 60px;
 
 			.r-item {
 				&__img {
@@ -562,11 +556,11 @@
 			}
 
 			&-prev {
-				left: -20px;
+				left: 0;
 			}
 
 			&-next {
-				right: -20px;
+				right: 0;
 			}
 		}
 	}
@@ -708,14 +702,11 @@
 				flex: 1 0 auto;
 				text-align: center;
 			}
-
-			&__catalog {
-				padding-right: 15px;
-			}
 		}
 
 		&__slider {
 			margin: 0;
+			padding: 0 15px 60px;
 
 			.r-item {
 				flex-direction: column;
@@ -806,7 +797,7 @@
 				height: 26px;
 				min-width: 37px;
 				min-height: 26px;
-				left: -15px;
+				left: 0;
 			}
 
 			&-next {
