--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ body {
     font-size: 56px;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
@@ -748,6 +748,24 @@ body {
 .assortment__slider {
   padding: 0 140px 110px;
   overflow: hidden;
+}
+.assortment__slider-wrapper {
+  transition: all 600ms linear !important;
+}
+@media (max-width: 1440px) {
+  .assortment__slider-wrapper {
+    transition: all 500ms linear !important;
+  }
+}
+@media (max-width: 768px) {
+  .assortment__slider-wrapper {
+    transition: all 400ms linear !important;
+  }
+}
+@media (max-width: 576px) {
+  .assortment__slider-wrapper {
+    transition: all 300ms linear !important;
+  }
 }
 .assortment__slider .item {
   width: 400px;
@@ -1117,12 +1135,11 @@ body {
   }
   .assortment__title {
     max-width: 290px;
-    padding-right: 15px;
     font-size: 36px;
   }
   .assortment .tabs {
     margin: 40px 0 30px;
-    padding-right: 15px;
+    padding: 0 15px;
     flex-wrap: nowrap;
     justify-content: flex-start;
     overflow: auto;
@@ -1545,6 +1562,9 @@ body {
   transform: translateY(-50%);
   right: 50px;
 }
+.recipe__slider-wrapper {
+  transition: all 500ms linear !important;
+}
 
 @media (max-width: 1920px) {
   .recipe__slider {
@@ -1910,7 +1930,7 @@ body {
   min-height: 280px;
   min-width: 100%;
   border: 1px solid #f3f3f3;
-  border-width: 0 1px 0 0;
+  border-width: 0 1px 1px 0;
 }
 .buy__more {
   min-width: 213px;
@@ -3037,7 +3057,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 999;
   background-color: #ffffff;
   transition: all 0.2s linear;
 }
