--- a/scss/blocks/_buy.scss
+++ b/scss/blocks/_buy.scss
@@ -72,7 +72,7 @@
 		min-height: 280px;
 		min-width: 100%;
 		border: 1px solid #f3f3f3;
-		border-width: 0 1px 0 0;
+		border-width: 0 1px 1px 0;
 	}
 	&__more {
 		min-width: 213px;
