--- a/css/main.css
+++ b/css/main.css
@@ -1755,13 +1755,12 @@ body {
     padding: 0 0 0 15px;
   }
   .recipe__title {
-    padding-right: 15px;
     font-size: 36px;
   }
   .recipe .tabs {
     max-width: 100%;
     margin: 40px 0 30px;
-    padding-right: 15px;
+    padding: 0 15px;
     flex-wrap: nowrap;
     justify-content: flex-start;
     overflow: auto;
